기본환경셋팅

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-*.class
-/bin
+# built application files
+*.apk
+*.ap_
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse project files
+.classpath
+.project
