--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -22,10 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.tsinform.Activity1"
-            >
-        </activity>
-    </application>
+        <activity android:name="com.tsinform.SampleActivity"></activity>
+        <activity android:name="com.tsinform.FacebookActivity"></activity>
+        </application>
 
 </manifest>
