intro runnable 처리.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.tsinform.MainActivity"></activity>
         <activity android:name="com.tsinform.SampleActivity"></activity>
         <activity android:name="com.tsinform.FacebookActivity"></activity>
         </application>
